Extended panel accordian margin to fix footer overlap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,7 +108,7 @@ body, html {
 }
 
 .panel-group {
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 }
 
 .panel-heading {
